objects/Credit_Card_Type_Number_Validation__mdt.object
<CustomObject>
    <fields>
        <fullName>Maximum_Charecter__c</fullName>
        <label>Maximum Charecter</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Charecter__c</fullName>
        <label>Minimum Charecter</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Starts_With__c</fullName>
        <label>Starts With</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Credit Card Type Number Validation</label>
    <pluralLabel>Credit Card Type Number Validation</pluralLabel>
</CustomObject>